syntax = "proto3";
package canine_chain.jklmint;

import "gogoproto/gogo.proto";

option go_package = "github.com/jackalLabs/canine-chain/x/jklmint/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  string mint_denom = 1 [ (gogoproto.moretags) = "yaml:\"mint_denom\"" ];
  int64 providerRatio = 2 [ (gogoproto.moretags) = "yaml:\"provider_ratio\"" ];
  int64 tokensPerBlock = 3 [ (gogoproto.moretags) = "yaml:\"tokens_per_block\"" ];


}
